--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#every 10 seconds
+param.scheduler.fixedrate.ms=10000
+
+#every 10 seconds
+param.scheduler.fixeddelay.ms=10000
+
+#every 10 seconds
+param.scheduler.cron=*/10 * * ? * *
